a rough first draft

--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -76,6 +76,7 @@
   <button color="primary" (click)="randomize()" mat-raised-button>
     Randomize & Copy to Clipboard
   </button>
+  <div>{{ searchText }}</div>
 
   <h3>A very indepth and helpful tutorial:</h3>
 
