--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -18,7 +18,7 @@
 
   <mat-form-field color="accent">
     <mat-label>Minimum Power</mat-label>
-    <input matInput value="1100" (input)="changeMinPower($event)" />
+    <input matInput (input)="changeMinPower($event)" />
   </mat-form-field>
 
   <div>
@@ -64,21 +64,33 @@
   </div>
 
   <div>
-    <section class="example-section">
-      <mat-checkbox [(ngModel)]="exotics" class="example-margin"
-        >Include Exotics</mat-checkbox
+    <mat-radio-group aria-label="Exotics" [(ngModel)]="exotics">
+      <mat-radio-button value="exclude">No Exotic</mat-radio-button>
+      <mat-radio-button value="include" [checked]="true"
+        >Possible Exotic</mat-radio-button
       >
-    </section>
+      <mat-radio-button value="required">Require Exotic</mat-radio-button>
+    </mat-radio-group>
+  </div>
+  <div>
     <mat-radio-group
       aria-label="Randomization Type"
       [(ngModel)]="randomizationType"
     >
-      <mat-radio-button value="weaponSet" checked="true"
-        >Weapons</mat-radio-button
+      <mat-radio-button value="weaponSet" [checked]="true"
+        >Randomize Weapons</mat-radio-button
       >
-      <mat-radio-button value="archetypeSet">Archetypes</mat-radio-button>
-      <mat-radio-button value="typeSet">Types</mat-radio-button>
+      <mat-radio-button value="archetypeSet"
+        >Randomize Archetypes</mat-radio-button
+      >
+      <mat-radio-button value="typeSet">Randomize Types</mat-radio-button>
     </mat-radio-group>
+  </div>
+  <div>
+    <mat-form-field color="accent">
+      <mat-label>Discord Webhook URL</mat-label>
+      <input matInput [(ngModel)]="discordWebhookUrl" />
+    </mat-form-field>
   </div>
   <button color="primary" (click)="randomize()" mat-raised-button>
     Randomize & Copy to Clipboard
@@ -141,6 +153,16 @@
       results, but my preference is to request they use the "Randomize from
       Search" button, pictured here:
       <img src="./assets/randomize-from-search.png" />
+    </li>
+    <li>
+      Pro tip: Use the Armor Mod Wizard on
+      <a href="https://www.d2checklist.com/gear/weapons" target="_blank"
+        >D2 Checklist</a
+      >
+      to quickly equip relevant mods.
+      <a href="https://www.youtube.com/watch?v=8LblnLMz8_4" target="_blank"
+        >Video tutorial here.</a
+      >
     </li>
   </ol>
 </div>
