Mask webhook, fix double exotic error.

--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -89,7 +89,7 @@
   <div>
     <mat-form-field color="accent">
       <mat-label>Discord Webhook URL</mat-label>
-      <input matInput [(ngModel)]="discordWebhookUrl" />
+      <input matInput [(ngModel)]="discordWebhookUrl" type="password" />
     </mat-form-field>
   </div>
   <button color="primary" (click)="randomize()" mat-raised-button>
