--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -1,4 +1,14 @@
 <div class="main-content">
+  <div class="title-block">
+    <div class="title">
+      <span class="srl srl-one">SRL</span>¹ is Dead<br />
+      Long Live <span class="srl srl-two">SRL</span>²
+    </div>
+    <div class="footnotes">
+      1: Sparrow Racing League <br />
+      2: Synchronized Random Loadouts
+    </div>
+  </div>
   <destiny-player
     *ngFor="let player of players; index as i"
     [player]="player"
