--- a/apps/party/src/app/app.component.scss
+++ b/apps/party/src/app/app.component.scss
@@ -4,6 +4,23 @@
   padding: 1em;
 }
 
+.title-block {
+  margin-bottom: 2em;
+}
+.title {
+  font-size: 2em;
+  line-height: 0.9em;
+  margin-bottom: 0.25em;
+}
+.srl {
+  font-weight: 800;
+}
+.footnotes {
+  font-size: 0.5em;
+  line-height: 1.25em;
+  margin-left: 2em;
+}
+
 img {
   max-width: 100%;
 }
