Less verbose instructions.

--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -229,20 +229,11 @@
         Instruct all players to export their Weapons spreadsheet from DIM's
         Settings page.
         <strong>Important:</strong> All players must have DIM set to the same
-        language for this to work. Here's a handy screenshot showing the
-        location of the export button in DIM:
+        language for this to work.
         <img src="./assets/dim-export.png" />
       </li>
-      <li>
-        Collect the destinyWeapons.csv files your players just exported. Ask
-        them to rename the CSV file before sending it to you if you'd like to
-        make things easier for yourself.
-      </li>
-      <li>
-        Import a CSV file for each player at the top of this page. You can add a
-        player name to keep track of which file is which, but it's not necessary
-        to do so for the randomizer to work its magic.
-      </li>
+      <li>Collect the destinyWeapons.csv files your players just exported.</li>
+      <li>Import a CSV file for each player at the top of this page.</li>
       <li>
         Choose your randomization type:
         <ul>
@@ -276,7 +267,7 @@
       <li>
         At this point, you <em>can</em> let your players choose from the search
         results, but my preference is to request they use the "Randomize from
-        Search" button, pictured here:
+        Search" button.
         <img src="./assets/randomize-from-search.png" />
       </li>
       <li>
